--- a/templates/clients/client-profile.html
+++ b/templates/clients/client-profile.html
@@ -24,7 +24,7 @@
             <div class="card mb-4">
                 <div class="edit card-header">
                     Account Details
-                    <a href="">Edit</a>
+                    <!-- <a href="">Edit</a> -->
                 </div>
                 
                 <div class="card-body">
