--- a/templates/home.html
+++ b/templates/home.html
@@ -38,11 +38,12 @@
     nav{
       width: 100%;
       position: fixed;
+      top: 0;
     }
     .container{
       width: 80%;
       /* background: yellow; */
-      margin-top: 40px;
+      margin-top: 90px;
       /* display: flex;
       flex-direction: column;
       align-items: center;
