--- a/templates/clients/remove-box.html
+++ b/templates/clients/remove-box.html
@@ -20,7 +20,7 @@
         {% for t, box_rent, expiry_date in boxes %}
         <tr>
             <td scope='col'> {{t.box}} </td>
-            <td scope='col'><i> $ {{box_rent}} </i></td>
+            <td scope='col'> $ {{box_rent}} </td>
             <td scope='col'> {{t.registration_date}} </td>
             <td scope='col'> {{expiry_date}} </td>
             <td scope='col'> {{t.rental_duration}} months </td>
